--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,11 @@ jobs:
         run: pnpm check:deps
       - name: License Check
         uses: sap/cloud-sdk-js/.github/actions/check-license@main
+      - name: Debug info
+        run: |
+          echo "Actor: ${{ github.actor }}"
+          echo "Event: ${{ github.event_name }}"
+          echo "PR title: ${{ github.event.pull_request.title }}"  
 
   dependabot:
     runs-on: ubuntu-latest
