--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,11 +55,11 @@ jobs:
         run: |
           echo "Actor: ${{ github.actor }}"
           echo "Event: ${{ github.event_name }}"
-          echo "PR title: ${{ github.event.pull_request.title }}"  
+          echo "PR title: ${{ github.event.pull_request.title }}"
 
   dependabot:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
+    if: ${{ (github.actor == 'dependabot[bot]' || startsWith(github.event.pull_request.title, 'chore(deps):')) && github.event_name == 'pull_request' }}
     needs: [test, checks]
     permissions:
       pull-requests: write
