--- a/.github/workflows/fosstars.yml
+++ b/.github/workflows/fosstars.yml
@@ -29,6 +29,9 @@ jobs:
           args: >
             --failOnCVSS 7
             --nvdApiKey ${{ secrets.NVD_API_KEY }}
+            --ossIndexUsername ${{ vars.OSS_INDEX_USERNAME }}
+            --ossIndexPassword ${{ secrets.OSS_INDEX_PASSWORD }}
+
       - name: 'Upload OWASP Dependency Check Report'
         if: always() && steps.depcheck.conclusion != 'skipped'
         uses: actions/upload-artifact@v4
