--- a/.github/workflows/fosstars.yml
+++ b/.github/workflows/fosstars.yml
@@ -9,6 +9,9 @@ jobs:
   security-checks:
     runs-on: ubuntu-latest
     name: 'Security rating'
+    permissions:
+      checks: write
+      contents: write
     steps:
       - uses: sap/ai-sdk-js/.github/actions/setup@main
         with:
@@ -42,7 +45,7 @@ jobs:
       - name: 'Run Fosstars Rating'
         uses: SAP/fosstars-rating-core-action@v1.14.0
         with:
-          token: '${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Slack Notification'
         if: failure()
         uses: slackapi/slack-github-action@v2.1.1
