--- a/.github/workflows/auto-fix-lint.yml
+++ b/.github/workflows/auto-fix-lint.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-permissions:
-  checks: write
-  contents: write
-
 jobs:
   fix-lint:
     if: github.actor != 'dependabot[bot]' && !github.event.pull_request.head.repo.fork
@@ -18,6 +14,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           node-version: ${{ vars.DEFAULT_NODE_VERSION }}
+          token: ${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}
       - run: pnpm lint:fix
       - name: Commit Changes if needed
         run: |
