Modified the auto-merge logic

--- a/.github/workflows/pnpm-update.yml
+++ b/.github/workflows/pnpm-update.yml
@@ -2,7 +2,7 @@ name: Monthly pnpm Dependency Update
 
 on:
   schedule:
-    - cron: '0 2 1 * *'
+    - cron: '0 2 1 * *'  # Runs at 02:00 UTC on the 1st of every month
   workflow_dispatch:
 
 jobs:
@@ -19,16 +19,17 @@ jobs:
         run: |
           pnpm --no-save update
           pnpm audit --audit-level moderate
+          
           if [[ -n "$(git status --porcelain)" ]]; then
             git config --global user.email "cloud-sdk-js@github.com"
             git config --global user.name "cloud-sdk-js"
-            git checkout -b "bot/monthly-transitive-dependency-update-$(date +%Y-%m-%d)"
+            BRANCH_NAME="bot/monthly-transitive-dependency-update-$(date -u +%Y-%m-%d)"
+            git checkout -b "$BRANCH_NAME"
             git add .
             git commit -m "chore: update pnpm transitive dependencies"
-            git push --set-upstream origin "bot/monthly-transitive-dependency-update-$(date +%Y-%m-%d)"
+            git push --set-upstream origin "$BRANCH_NAME"
           else
             echo "No changes to commit"
-            exit 0
           fi
 
       - name: Create Pull Request
@@ -38,11 +39,12 @@ jobs:
           github-token: ${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}
           script: |
             const { repo, owner } = context.repo;
+            const branch = `bot/monthly-transitive-dependency-update-${new Date().toISOString().split('T')[0]}`;
             const result = await github.rest.pulls.create({
               title: 'Monthly Transitive Dependency Update',
               owner,
               repo,
-              head: `bot/monthly-transitive-dependency-update-${new Date().toISOString().split('T')[0]}`,
+              head: branch,
               base: 'main',
               body: 'This is an automated PR to update pnpm transitive dependencies.'
             });
@@ -54,41 +56,65 @@ jobs:
         with:
           github-token: ${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}
           script: |
+            const retry = require('async-retry');
             const { repo, owner } = context.repo;
+            const branch = `bot/monthly-transitive-dependency-update-${new Date().toISOString().split('T')[0]}`;
+
             const pulls = await github.rest.pulls.list({
               owner,
               repo,
-              head: `bot/monthly-transitive-dependency-update-${new Date().toISOString().split('T')[0]}`,
+              head: `${owner}:${branch}`,
               base: 'main',
               state: 'open'
             });
-            
+
             if (pulls.data.length === 0) {
               console.log('No matching pull request found');
               return;
             }
-            
+
             const pr = pulls.data[0];
-            
-            // Wait for checks to complete
-            await new Promise(resolve => setTimeout(resolve, 300000)); // Wait 5 minutes
-            
-            const { data: checks } = await github.rest.checks.listForRef({
-              owner,
-              repo,
-              ref: pr.head.sha
-            });
-            
-            const allChecksPassed = checks.check_runs.every(run => run.conclusion === 'success');
-            
-            if (allChecksPassed) {
+
+            const result = await retry(
+              async () => {
+                const { data: checks } = await github.rest.checks.listForRef({
+                  owner,
+                  repo,
+                  ref: pr.head.sha
+                });
+
+                const allCompleted = checks.check_runs.every(run => run.status === 'completed');
+                const allAcceptable = checks.check_runs.every(run =>
+                  ['success', 'skipped', 'neutral'].includes(run.conclusion)
+                );
+
+                if (!allCompleted) {
+                  throw new Error(`PR #${pr.number} still has pending checks. Retrying...`);
+                }
+
+                if (!allAcceptable) {
+                  throw new Error(`PR #${pr.number} has failed checks that prevent merging.`);
+                }
+
+                return 'success';
+              },
+              {
+                retries: 30,
+                factor: 1.5,
+                minTimeout: 10000,
+                maxTimeout: 60000,
+                onRetry: (error, attempt) => {
+                  console.log(`Attempt ${attempt} failed: ${error.message}. Retrying...`);
+                }
+              }
+            );
+
+            if (result === 'success') {
               await github.rest.pulls.merge({
                 owner,
                 repo,
                 pull_number: pr.number,
                 merge_method: 'squash'
               });
-              console.log(`Pull Request #${pr.number} merged successfully`);
-            } else {
-              console.log(`Not all checks passed for PR #${pr.number}`);
+              console.log(`PR #${pr.number} merged successfully.`);
             }
