--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -21,12 +21,11 @@
     "lint:fix": "eslint . --fix && prettier . --config ../.prettierrc --ignore-path ../.prettierignore -w --log-level error"
   },
   "dependencies": {
-    "@langchain/langgraph": "^0.4.9",
+    "@langchain/core": "^1.0.0-alpha.6",
+    "@langchain/langgraph": "^1.0.0-alpha.5",
     "@langchain/mcp-adapters": "^0.6.0",
+    "@langchain/textsplitters": "1.0.0-alpha.1",
     "@modelcontextprotocol/sdk": "^1.20.0",
-    "langchain": "0.3.36",
-    "@langchain/core": "0.3.78",
-    "@langchain/textsplitters": "0.1.0",
     "@sap-ai-sdk/ai-api": "workspace:^",
     "@sap-ai-sdk/document-grounding": "workspace:^",
     "@sap-ai-sdk/foundation-models": "workspace:^",
@@ -36,6 +35,7 @@
     "@sap-cloud-sdk/util": "^4.1.2",
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
+    "langchain": "1.0.0-alpha.7",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
   }
